[gd_scene load_steps=7 format=3 uid="uid://dylgdhhbs5gqn"]

[ext_resource type="Script" path="res://scenes/skill_menu.gd" id="1_1twrq"]
[ext_resource type="Shader" path="res://skill_menu.gdshader" id="1_3mjah"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wmkwn"]
shader = ExtResource("1_3mjah")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_2cym8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fxlkj"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4rkk"]
_data = {
"RESET": SubResource("Animation_2cym8"),
"blur": SubResource("Animation_fxlkj")
}

[node name="SkillMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1twrq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wmkwn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -155.5
offset_right = 283.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
alignment = 1

[node name="btnSkillAttackSpeed" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Attack Speed +10%"

[node name="btnSkillAttackDamage" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Attack Damage +10%"

[node name="btnSkillMovementSpeed" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Movement Speed + 10%"

[node name="btnSkillLifeSteal" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Life Steal +3 HP"

[node name="btnSkillTwoArrows" type="Button" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Two Arrows"

[node name="btnSkillMaxHealth" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Increase Max Health + 50"

[node name="btnSkillFireArrows" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Fire Arrows"

[node name="btnSkillFrozenArrows" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Frozen Arrows"

[node name="btnSkillKnockArrows" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Knock Arrows"

[node name="btnSkillDamageResistance" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Increase Damage 
Resistance + 20%"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4rkk")
}

[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillAttackSpeed" to="." method="_on_btn_skill_attack_speed_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillAttackDamage" to="." method="_on_btn_skill_attack_damage_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillMovementSpeed" to="." method="_on_btn_skill_movement_speed_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillLifeSteal" to="." method="_on_btn_skill_life_steal_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillTwoArrows" to="." method="_on_btn_skill_two_arrows_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillMaxHealth" to="." method="_on_btn_skill_max_health_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillFireArrows" to="." method="_on_btn_skill_fire_arrows_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillFrozenArrows" to="." method="_on_btn_skill_frozen_arrows_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillKnockArrows" to="." method="_on_btn_skill_knock_arrows_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/btnSkillDamageResistance" to="." method="_on_btn_skill_damage_resistance_pressed"]
